--- a/visualisations/graphs.ipynb
+++ b/visualisations/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -47,6 +47,172 @@
    ],
    "source": [
     "df.Programme.value_counts()[:15].plot.bar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>pos_tags</th>\n",
+       "      <th>chunk_tags</th>\n",
+       "      <th>ner_tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>['EU' 'rejects' 'German' 'call' 'to' 'boycott'...</td>\n",
+       "      <td>[22 42 16 21 35 37 16 21  7]</td>\n",
+       "      <td>[11 21 11 12 21 22 11 12  0]</td>\n",
+       "      <td>[3 0 7 0 0 0 7 0 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>['Peter' 'Blackburn']</td>\n",
+       "      <td>[22 22]</td>\n",
+       "      <td>[11 12]</td>\n",
+       "      <td>[1 2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>['BRUSSELS' '1996-08-22']</td>\n",
+       "      <td>[22 11]</td>\n",
+       "      <td>[11 12]</td>\n",
+       "      <td>[5 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>['The' 'European' 'Commission' 'said' 'on' 'Th...</td>\n",
+       "      <td>[12 22 22 38 15 22 28 38 15 16 21 35 24 35 37 ...</td>\n",
+       "      <td>[11 12 12 21 13 11 11 21 13 11 12 13 11 21 22 ...</td>\n",
+       "      <td>[0 3 4 0 0 0 0 0 0 7 0 0 0 0 0 7 0 0 0 0 0 0 0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>['Germany' \"'s\" 'representative' 'to' 'the' 'E...</td>\n",
+       "      <td>[22 27 21 35 12 22 22 27 16 21 22 22 38 15 22 ...</td>\n",
+       "      <td>[11 11 12 13 11 12 12 11 12 12 12 12 21 13 11 ...</td>\n",
+       "      <td>[5 0 0 0 0 3 4 0 0 0 1 2 0 0 0 0 0 0 0 0 0 0 0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                             tokens  \\\n",
+       "0   0  ['EU' 'rejects' 'German' 'call' 'to' 'boycott'...   \n",
+       "1   1                              ['Peter' 'Blackburn']   \n",
+       "2   2                          ['BRUSSELS' '1996-08-22']   \n",
+       "3   3  ['The' 'European' 'Commission' 'said' 'on' 'Th...   \n",
+       "4   4  ['Germany' \"'s\" 'representative' 'to' 'the' 'E...   \n",
+       "\n",
+       "                                            pos_tags  \\\n",
+       "0                       [22 42 16 21 35 37 16 21  7]   \n",
+       "1                                            [22 22]   \n",
+       "2                                            [22 11]   \n",
+       "3  [12 22 22 38 15 22 28 38 15 16 21 35 24 35 37 ...   \n",
+       "4  [22 27 21 35 12 22 22 27 16 21 22 22 38 15 22 ...   \n",
+       "\n",
+       "                                          chunk_tags  \\\n",
+       "0                       [11 21 11 12 21 22 11 12  0]   \n",
+       "1                                            [11 12]   \n",
+       "2                                            [11 12]   \n",
+       "3  [11 12 12 21 13 11 11 21 13 11 12 13 11 21 22 ...   \n",
+       "4  [11 11 12 13 11 12 12 11 12 12 12 12 21 13 11 ...   \n",
+       "\n",
+       "                                            ner_tags  \n",
+       "0                                [3 0 7 0 0 0 7 0 0]  \n",
+       "1                                              [1 2]  \n",
+       "2                                              [5 0]  \n",
+       "3  [0 3 4 0 0 0 0 0 0 7 0 0 0 0 0 7 0 0 0 0 0 0 0...  \n",
+       "4  [5 0 0 0 0 3 4 0 0 0 1 2 0 0 0 0 0 0 0 0 0 0 0...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conll_train_df = pd.read_csv('../data/conll2003/conll2003train.csv')\n",
+    "conll_train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_16964\\4001990754.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  conll_train_df['clean_tokens'] = conll_train_df.tokens.str.replace('[', '').str.replace(']', '').str.replace(\"'\",\"\").str.split()\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_16964\\4001990754.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  conll_train_df['clean_ner_tags'] = conll_train_df.ner_tags.str.replace('[', '').str.replace(']', '').str.replace(\"'\",\"\").str.split()\n"
+     ]
+    }
+   ],
+   "source": [
+    "conll_train_df['clean_tokens'] = conll_train_df.tokens.str.replace('[', '').str.replace(']', '').str.replace(\"'\",\"\").str.split()\n",
+    "conll_train_df['clean_ner_tags'] = conll_train_df.ner_tags.str.replace('[', '').str.replace(']', '').str.replace(\"'\",\"\").str.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_names_from_df(df, tokencolumn, ner_column):\n",
+    "    names = []\n",
+    "    for row in range(len(df.tokencolumn)):\n",
+    "        \n",
+    "    "
    ]
   },
   {
