--- a/visualisations/graphs.ipynb
+++ b/visualisations/graphs.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# notebook um geeignete Grafiken für die Präsentation zu erstellen\n",
+    "# Ziel: Verständnis, warum base_bert_NER bei Namen unpräzise ist"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -760,171 +770,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>asian</th>\n",
-       "      <th>hispanic</th>\n",
-       "      <th>nh_black</th>\n",
-       "      <th>nh_white</th>\n",
-       "      <th>race</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Peter</td>\n",
-       "      <td>0.011000</td>\n",
-       "      <td>0.026643</td>\n",
-       "      <td>0.171615</td>\n",
-       "      <td>0.790742</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Blackburn</td>\n",
-       "      <td>0.007856</td>\n",
-       "      <td>0.025816</td>\n",
-       "      <td>0.038489</td>\n",
-       "      <td>0.927840</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Werner</td>\n",
-       "      <td>0.007907</td>\n",
-       "      <td>0.020864</td>\n",
-       "      <td>0.007079</td>\n",
-       "      <td>0.964150</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Zwingmann</td>\n",
-       "      <td>0.008947</td>\n",
-       "      <td>0.029027</td>\n",
-       "      <td>0.010981</td>\n",
-       "      <td>0.951045</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Nikolaus</td>\n",
-       "      <td>0.013478</td>\n",
-       "      <td>0.018879</td>\n",
-       "      <td>0.013838</td>\n",
-       "      <td>0.953805</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11123</th>\n",
-       "      <td>Hedblom</td>\n",
-       "      <td>0.012487</td>\n",
-       "      <td>0.014451</td>\n",
-       "      <td>0.020479</td>\n",
-       "      <td>0.952582</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11124</th>\n",
-       "      <td>Retief</td>\n",
-       "      <td>0.006478</td>\n",
-       "      <td>0.192197</td>\n",
-       "      <td>0.057397</td>\n",
-       "      <td>0.743929</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11125</th>\n",
-       "      <td>Goosen</td>\n",
-       "      <td>0.027368</td>\n",
-       "      <td>0.036216</td>\n",
-       "      <td>0.066716</td>\n",
-       "      <td>0.869700</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11126</th>\n",
-       "      <td>David</td>\n",
-       "      <td>0.032793</td>\n",
-       "      <td>0.105270</td>\n",
-       "      <td>0.333693</td>\n",
-       "      <td>0.528243</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11127</th>\n",
-       "      <td>Gilford</td>\n",
-       "      <td>0.005335</td>\n",
-       "      <td>0.014473</td>\n",
-       "      <td>0.305143</td>\n",
-       "      <td>0.675050</td>\n",
-       "      <td>nh_white</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11128 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            name     asian  hispanic  nh_black  nh_white      race\n",
-       "0          Peter  0.011000  0.026643  0.171615  0.790742  nh_white\n",
-       "1      Blackburn  0.007856  0.025816  0.038489  0.927840  nh_white\n",
-       "2         Werner  0.007907  0.020864  0.007079  0.964150  nh_white\n",
-       "3      Zwingmann  0.008947  0.029027  0.010981  0.951045  nh_white\n",
-       "4       Nikolaus  0.013478  0.018879  0.013838  0.953805  nh_white\n",
-       "...          ...       ...       ...       ...       ...       ...\n",
-       "11123    Hedblom  0.012487  0.014451  0.020479  0.952582  nh_white\n",
-       "11124     Retief  0.006478  0.192197  0.057397  0.743929  nh_white\n",
-       "11125     Goosen  0.027368  0.036216  0.066716  0.869700  nh_white\n",
-       "11126      David  0.032793  0.105270  0.333693  0.528243  nh_white\n",
-       "11127    Gilford  0.005335  0.014473  0.305143  0.675050  nh_white\n",
-       "\n",
-       "[11128 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred_fl_reg_ln(names_df, 'name')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -947,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
